# IMPaCS

./: .gitignore  CITATION.cff  CITATION.md  LICENSE.txt  README.md  configuration.yml  environment.yml  impacts.py  impacts_cross_section_prototype_function.ipynb  impacts_dev4.ipynb  impacts_dev5.ipynb  impacts_dev6.ipynb  impacts_plots_analysis.ipynb  impacts_prototype_with_test_case.ipynb  impacts_test_case.ipynb  map_figure_at_timestep.ipynb  map_full_figure_at_timestep.ipynb  pyproject.toml  run_ensemble_impacts.py  run_full_impacts.py  run_impacts.slurm  sfd.csv  sio2_curve_from_ensemble.ipynb  sio2_curve_from_ensemble_bound.ipynb  sio2_curve_from_ensemble_july2025.ipynb  sio2_curve_from_ensemble_march_5km.ipynb  sio2_curve_from_ensemble_unbound.ipynb  xrf-frac-calc-v10.xlsx
environments/: impaacs.yml
impact_probabilities_export/: ensemble_1.csv  ensemble_10.csv  ensemble_100.csv  ensemble_101.csv  ensemble_102.csv  ensemble_103.csv  ensemble_104.csv  ensemble_105.csv  ensemble_106.csv  ensemble_107.csv  ensemble_108.csv  ensemble_109.csv  ensemble_11.csv  ensemble_110.csv  ensemble_111.csv  ensemble_112.csv  ensemble_113.csv  ensemble_114.csv  ensemble_115.csv  ensemble_116.csv  ensemble_117.csv  ensemble_118.csv  ensemble_119.csv  ensemble_12.csv  ensemble_120.csv  ensemble_121.csv  ensemble_122.csv  ensemble_123.csv  ensemble_124.csv  ensemble_125.csv  ensemble_126.csv  ensemble_127.csv  ensemble_128.csv  ensemble_129.csv  ensemble_13.csv  ensemble_130.csv  ensemble_131.csv  ensemble_132.csv  ensemble_133.csv  ensemble_134.csv  (+259 more)
impact_probabilities_export_bound_30jan2022/: ensemble_0.csv  ensemble_13.csv  ensemble_17.csv  (+8 more)
(+3676 files in other folders)
