[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "IMPaCS"
version = "0.1.0"
keywords = ["geology", "geophysics", "impact modeling", "SiO2"]
authors = [{ name = "Jonathan M. Frame", email = "jmframe@crimson.ua.edu"},
           { name = "Jordan Faltys", email = "jfaltys@ua.edu"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering :: Earth Sciences"
]
description = "Dynamic geospatial model for impact-generated crustal evolution (IMPAaCS)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.20",
  "pandas>=1.2",
  "matplotlib>=3.3",
  "ease_grid>=0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black",
  "flake8",
  "isort"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]